--- a/views/apply.ejs
+++ b/views/apply.ejs
@@ -9,7 +9,7 @@
 <body>
 <div id="application-list">
 <h1>Applications</h1>
-<div id="spacer"></div>
+<div id="spacer">
 <a href="/apply/teacher">Apply to become a teacher.</a>
 </div>
 </body>
